<resources>
    <string name="app_name">ImagiWorkportal</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="_since">Since:</string>
    <string name="_until">Until:</string>
    <string name="_end_date">End date:</string>
    <string name="_begin_date">Begin date:</string>
    <string name="_last_vacations">Last vacations:</string>
    <string name="_request_date">Request date:</string>
    <string name="_process">Process:</string>
    <string name="_deny">Deny</string>
    <string name="_approve">Approve</string>
    <string name="_approved">Approved:</string>
</resources>
